[gd_scene load_steps=2 format=3 uid="uid://cddem2i73sbap"]

[ext_resource type="Script" path="res://addons/savedata-dx/view/save_view.gd" id="1_sit27"]

[node name="SaveView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_sit27")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VerticalSplit" type="SplitContainer" parent="Margin"]
layout_mode = 2
vertical = true

[node name="Header" type="PanelContainer" parent="Margin/VerticalSplit"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Margin/VerticalSplit/Header"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 3

[node name="HeadEditMode" type="OptionButton" parent="Margin/VerticalSplit/Header/HBox"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Slot"
popup/item_0/id = 0
popup/item_1/text = "Common"
popup/item_1/id = 1
popup/item_2/text = "Debugger"
popup/item_2/id = 2

[node name="VSeparator" type="VSeparator" parent="Margin/VerticalSplit/Header/HBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeadNew" type="Button" parent="Margin/VerticalSplit/Header/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "New"

[node name="HeadLoad" type="Button" parent="Margin/VerticalSplit/Header/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Open"

[node name="HeadSave" type="Button" parent="Margin/VerticalSplit/Header/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="CodeEdit" type="CodeEdit" parent="Margin/VerticalSplit"]
unique_name_in_owner = true
layout_mode = 2
draw_tabs = true
minimap_draw = true
minimap_width = 60
caret_blink = true
gutters_draw_line_numbers = true

[node name="DebugSelect" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(275, 162)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 1
root_subfolder = "sv/"

[connection signal="item_selected" from="Margin/VerticalSplit/Header/HBox/HeadEditMode" to="." method="_on_edit_mode_selected"]
[connection signal="pressed" from="Margin/VerticalSplit/Header/HBox/HeadNew" to="." method="_on_head_new_pressed"]
[connection signal="pressed" from="Margin/VerticalSplit/Header/HBox/HeadLoad" to="." method="_on_head_load_pressed"]
[connection signal="pressed" from="Margin/VerticalSplit/Header/HBox/HeadSave" to="." method="_on_head_save_pressed"]
[connection signal="file_selected" from="DebugSelect" to="." method="_on_debug_select_file"]
